# faultline

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  langgraph.json  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: archetypes.yaml  mechanisms.yaml  prompts.yaml  providers.yaml  scoring.yaml  stages.yaml
data/samples/: arctic_cable_bypass.json  debt_defense_spiral.json  open_model_breakout.json
docs/: GLOSSARY.md  MIGRATION_PLAN.md  RUN_LIVE_GUIDE.md
docs/examples/: run_live_policy_48h.json  run_live_positions_48h.json  run_live_watchlist_48h.json
notebooks/: README.md  debug_nodes.ipynb  faultline_operator_surface.ipynb  strategic_swarm_operator_surface.ipynb
src/faultline/: README.md  __init__.py  __main__.py  operator_app.py
src/faultline/agents/: __init__.py  execution_critic.py  opportunity_generator.py  pattern_matcher.py  ripple_architect.py  signal_alchemist.py
src/faultline/analysis/: README.md  __init__.py  portfolio_engine.py  system_first.py  utils.py
src/faultline/evaluation/: README.md  rubric.py
src/faultline/graph/: README.md  review.py  runner.py  studio.py  workflow.py
src/faultline/intake/: README.md  __init__.py  topic_chat.py
src/faultline/llm/: README.md  backend.py
src/faultline/memory/: README.md  __init__.py  store.py
src/faultline/models/: README.md  __init__.py  contracts.py  state.py
src/faultline/persistence/: README.md  store.py
src/faultline/prediction/: README.md  __init__.py  outcome.py
src/faultline/presentation/: README.md  operator_surface.py
src/faultline/providers/: README.md  __init__.py  base.py  live.py  normalizer.py  registry.py  sample.py
src/faultline/scoring/: fragility.py
src/faultline/synthesis/: README.md  __init__.py  report_builder.py
src/faultline/utils/: README.md  config.py  env.py  logging.py
src/strategic_swarm_agent/: __init__.py  __main__.py  operator_app.py
src/strategic_swarm_agent/agents/: __init__.py  execution_critic.py  opportunity_generator.py  pattern_matcher.py  ripple_architect.py  signal_alchemist.py
tests/: test_archetypes.py  test_calibration.py  test_env_bootstrap.py  test_followup_loop.py  test_graph_e2e.py  test_llm_contracts.py  test_memory_persistence.py  test_models.py  test_normalization.py  test_operator_surface.py  test_outcomes.py  test_portfolio_actions.py  test_prediction_layer.py  test_providers.py  test_replay.py  test_report_storytelling.py  test_runtime_architecture.py  test_scenario_nodes.py  test_scoring.py  test_topic_chat.py  test_utils.py  test_workspace_checkpoints.py
tests/fixtures/: alphavantage_global_quote.json  alphavantage_news_sentiment.json  fred_series_observations.json  fred_series_updates.json  gdelt_doc_artlist.json  newsapi_everything.json  openai_websearch_response.json
(+60 files in other folders)
