[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "strategic-swarm-agent"
version = "0.1.0"
description = "Structural fragility and asymmetric disruption reasoning engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "httpx>=0.28.1",
  "langgraph>=1.0.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.1",
  "psycopg[binary]>=3.2.0",
  "PyYAML>=6.0.2",
  "langgraph-cli (>=0.4.14,<0.5.0)",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
  "pre-commit>=4.0.0",
]
operator = [
  "ipykernel>=6.29.5",
  "jupyterlab>=4.4.0",
  "streamlit>=1.42.0",
]

[project.scripts]
strategic-swarm-agent = "strategic_swarm_agent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/strategic_swarm_agent"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = [
  "E501",   # line too long — handled by formatter, not enforced as error
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # allow unused imports in test files (fixtures, re-exports)
